AddTaskTodoMicroservice/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-tasks
spec:
  replicas: 3
  selector:
    matchLabels:
      app: add-tasks
  template:
    metadata:
      labels:
        app: add-tasks
    spec:
      containers:
      - name: add-tasks
        image: devopsinsiders/add-tasks
        ports:
        - containerPort: 8000
