AddTaskTodoMicroservice/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: add-tasks
spec:
  type: ClusterIP
  selector:
    app: add-tasks
  ports:
    - port: 80
      targetPort: 8000
